--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,13 @@
     <string name="app_name">WBT201</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="strButtonConnect">Tracks vom GPS Logger holen</string>
-    <string name="action_erase">Speicher löschen</string>
-    <string name="string_really_erase">Soll der Logger wirklich gelöscht werden?</string>
-    <string name="string_erase_ok">Wirklich löschen!</string>
-    <string name="string_dont_erase">Nein, besser nicht.</string>
-    <string name="string_missed_swon_bt">Zuerst Bluetooth einschalten!</string>
-    <string name="action_test">Verbindung testen</string>
-    <string name="string_still_busy">Langsam, bin noch beschäftigt...</string>
+    <string name="strButtonConnect">Download Tracks</string>
+    <string name="string_really_erase">Do you really want to clear tracks onthe logger?</string>
+    <string name="string_erase_ok">Yes, clear memory.</string>
+    <string name="string_dont_erase">No, don\'t erase.</string>
+    <string name="string_missed_swon_bt">First enable Bluetooth!</string>
+    <string name="action_test">Test Connection</string>
+    <string name="string_still_busy">Wait, still busy...</string>
+    <string name="action_erase">Clear tracks on device</string>
 
 </resources>
