--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">WBT201</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="strButtonConnect">Tracks vom GPS Logger holen</string>
     <string name="action_erase">Speicher löschen</string>
@@ -12,5 +11,22 @@
     <string name="string_missed_swon_bt">Zuerst Bluetooth einschalten!</string>
     <string name="action_test">Verbindung testen</string>
     <string name="string_still_busy">Langsam, bin noch beschäftigt...</string>
+    <string name="string_J2ME">"  unter Verwendung von GetWBT (J2ME)\n"</string>
+    <string name="string_cant_establish_connection">Kann keine Verbindung aufbauen!\n</string>
+    <string name="string_clear_failed">Löschen ist fehlgeschlagen!</string>
+    <string name="string_connect_failed">Hat nicht geklappt!\n</string>
+    <string name="string_connecting_with">"Verbinde mit "</string>
+    <string name="string_connection_error">Verbindungsfehler!\n</string>
+    <string name="string_connection_terminated">Verbindung beendet\n\n</string>
+    <string name="string_fillheight">"Füllstand "</string>
+    <string name="string_known_bt_devices">Bekannte BT Geräte:\n</string>
+    <string name="string_login_failed">Login fehlgeschlagen!\n</string>
+    <string name="string_login_ok">Login ok\n</string>
+    <string name="string_multiple_loggers">Mehrere Logger! Nur der letzte wird genommen...\n</string>
+    <string name="string_no_matching_bt_logger">Kein passender Logger in der Liste der bekannten Bluetooth Geräte!\n</string>
+    <string name="string_points_approx">"Points ca. "</string>
+    <string name="string_track_download_to">"Track Download in das Verzeichnis:\n "</string>
+    <string name="string_bt_unavailable">Bluetooth ist nicht eingeschaltet.</string>
+    <string name="string_GPL">(c) 2014 unter GPL Lizenz\n</string>
 
 </resources>
