--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">WBT201</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="strButtonConnect">Download Tracks</string>
     <string name="string_really_erase">Do you really want to clear tracks onthe logger?</string>
@@ -10,7 +9,24 @@
     <string name="string_dont_erase">No, don\'t erase.</string>
     <string name="string_missed_swon_bt">First enable Bluetooth!</string>
     <string name="action_test">Test Connection</string>
-    <string name="string_still_busy">Wait, still busy...</string>
+    <string name="string_still_busy">Wait, still busy…</string>
     <string name="action_erase">Clear tracks on device</string>
+    <string name="string_J2ME">"  with source code from GetWBT (J2ME)\n"</string>
+    <string name="string_GPL">(c) 2014 under GPL\n</string>
+    <string name="string_track_download_to">"track download directory:\n "</string>
+    <string name="string_connect_failed">Did\'nt succeed!\n</string>
+    <string name="string_known_bt_devices">Known BT devices:\n</string>
+    <string name="string_multiple_loggers">Multiple loggers!\nThe last in list is selected...\n</string>
+    <string name="string_no_matching_bt_logger">No matching logger in the list of known Bluetooth devices!\n</string>
+    <string name="string_connecting_with">"Connecting to "</string>
+    <string name="string_bt_unavailable">Bluetooth is not available.</string>
+    <string name="string_cant_establish_connection">Can\'t setup connection!\n</string>
+    <string name="string_connection_error">Connect faied!\n</string>
+    <string name="string_login_ok">Login ok\n</string>
+    <string name="string_login_failed">Login failed!\n</string>
+    <string name="string_points_approx">"Points approx. "</string>
+    <string name="string_fillheight">"Memory usage "</string>
+    <string name="string_connection_terminated">Connection terminated\n\n</string>
+    <string name="string_clear_failed">Clear failed!</string>
 
 </resources>
